Try to fix modal position on mobile screen

--- a/components/layout/modal/modal.module.scss
+++ b/components/layout/modal/modal.module.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/mixins.scss';
 
 .modalWrapper {
-  position: absolute;
+  position: fixed;
   top:0;
   left: 0;
   bottom: 0;
